<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICRApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="modo"></string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Login</string>
    <string name="pictureLogin">Proyecto ICRA</string>
    <string name="temperatura"></string>
    <string name="humedad"></string>
    <string name="aire"></string>
    <string name="calef"></string>
    <string name="humidi"></string>
    <string name="vent"></string>
    <string name="atemp"></string>
    <string name="ahum"></string>
    <string name="agas"></string>
    <string name="GAinftemp"></string>
    <string name="GAsuptemp"></string>
    <string name="GAsuphum"></string>
    <string name="GAinfhum"></string>
    <string name="GAinfair"></string>
    <string name="RAinftemp"></string>
    <string name="RAsuptemp"></string>
    <string name="RAinfhum"></string>
    <string name="RAsuphum"></string>
    <string name="EstVent"></string>
    <string name="Seta"/>
    <string name="MaxAirIndicator">100</string>
    <string name="Server_IP">http://192.168.1.130</string>
    <string name="Server_Port">:8080</string>
    <string name="notifTemp"/>
    <string name="notifGAinftemp"/>
    <string name="notifGAsuptemp"/>
    <string name="stateTrazar"/>
    <string name="notifHum"/>
    <string name="notifGAinfhum"/>
    <string name="notifGAsuphum"/>

</resources>
